--- a/css/resume.css
+++ b/css/resume.css
@@ -5,6 +5,10 @@
   color: white;
 }
 
+.profile {
+  text-align: center;
+}
+
 /* Skills */
 .skills {
   width: 100%;
@@ -133,7 +137,71 @@
   width: var(--intermediate);
 }
 
+/* School */
+.school {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 25% 75%;
+}
+
+.school__range {
+  grid-row: 1 / -1;
+  grid-column: 1 / 2;
+}
+
+.school__name {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.school__program {
+  font-size: 1.5rem;
+}
+
+
+
+
+/* Job */
+.job {
+  display: grid;
+  grid-template-rows: repeat(3, 2rem) 1fr;
+  grid-template-columns: 25% 75%;
+}
+
+.job__range {
+  grid-row: 1 / -1;
+  grid-column: 1 / 2;
+}
+
+.job__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.job__company {
+  font-size: 1.25rem;
+}
+
+.job__location {}
+
+
+.job__highlights {}
+
+.other__skills {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+}
+
 /* Activities */
-.activities {
-  float: left;
+.activities ul {
+  list-style: none;
+}
+
+.profile {
+  text-decoration: none;
+  color: var(--text);
+  font-family: 'Great Vibes', cursive;
+  font-size: 4rem;
+  padding-top: 1rem;
 }
