--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,15 @@ h4 {
   font-weight: bold;
 }
 
+h1 {
+  font-size: 3rem;
+  text-decoration: underline;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
 /* Navigation */
 nav {
   font-family: 'Economica', sans-serif;
