--- a/css/resume.css
+++ b/css/resume.css
@@ -9,6 +9,14 @@
   text-align: center;
 }
 
+/* Background */
+body {
+  background-color: var(--mustard);
+  border: var(--darker-mustard) solid 3rem;
+  border-radius: 2rem;
+  font-family: 'Prociono', serif;
+}
+
 /* Skills */
 .skills {
   width: 100%;
@@ -142,6 +150,7 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 25% 75%;
+  padding-bottom: 1rem;
 }
 
 .school__range {
@@ -157,9 +166,6 @@
 .school__program {
   font-size: 1.5rem;
 }
-
-
-
 
 /* Job */
 .job {
@@ -191,10 +197,16 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
+  font-size: 1.25rem;
 }
 
 /* Activities */
+.activities {
+  font-size: 1.15rem;
+}
+
 .activities ul {
+  display: flexbox;
   list-style: none;
 }
 
